# code_generator-assistant

./: .gitignore  Documentation  README  modelfile  pyproject.toml  requirements.txt  startup-script.sh
code_generator/: codellama.py  config.py  log_utils.py  main.py  utils.py
code_generator/templates/: index.html
docker/: Dockerfile
